# authentication-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: auth_service_ci.yml
app/: main.py
app/api/v1/routes/: auth.py  password.py  rbac.py
app/core/: config.py  db.py  security.py
app/dependecies/: auth.py  email.py  rbac.py
app/models/: associations.py  permission.py  role.py  token.py  user.py
app/repositories/: permission_repository.py  role_repository.py  token_repository.py  user_repository.py
app/routes/: auth.py  rbac.py
app/schemas/: auth.py  rbac.py
app/services/: auth_service.py  password_service.py  rbac_service.py
auth/: pyproject.toml
tests/: conftest.py  test_auth.py  test_password_reset.py  test_rbac.py
