[tool.poetry]
name = "auth-services"
version = "0.1.0"
description = "Service responsible to register and authenticate users"
authors = ["Almerindo Uazela <almerindo.uazela@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.36"
mysql-connector-python = "^9.1.0"
redis = "^5.2.1"
aioredis = "^2.0.1"
pydantic = {extras = ["email"], version = "^2.10.4"}
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
